--- a/.gitignore
+++ b/.gitignore
@@ -331,3 +331,7 @@ ASALocalRun/
 
 # MFractors (Xamarin productivity tool) working folder 
 .mfractor/
+
+#Engine directcories
+./LittleEngine/Engine/Assets/
+./LittleEngine/Engine/Library/
