--- a/LittleEngine.vcxproj.filters
+++ b/LittleEngine.vcxproj.filters
@@ -132,6 +132,9 @@
     <ClCompile Include="LittleEngine\src\imgui\imgui_impl_sdl.cpp">
       <Filter>imgui</Filter>
     </ClCompile>
+    <ClCompile Include="LittleEngine\src\Modules\ModuleFilesystem.cpp">
+      <Filter>Modules</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Globals.h">
@@ -244,6 +247,9 @@
     </ClInclude>
     <ClInclude Include="LittleEngine\src\imgui\imgui_impl_sdl.h">
       <Filter>imgui</Filter>
+    </ClInclude>
+    <ClInclude Include="LittleEngine\src\Modules\ModuleFilesystem.h">
+      <Filter>Modules</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
